<resources>
    <string name="app_name">银结通</string>
    <string name="login">登陆</string>
    <string name="bank">银结通</string>
    <string name="QR">QRCode</string>
    <string name="ticket_conversion">票包交换</string>
    <string name="ticket_transfer">中转票包</string>
    <string name="normal_package">普通包裹</string>
    <string name="sort_center">分拣中心</string>
    <string name="car_record">用车记录</string>
    <string name="car_record_list">用车记录表</string>
    <string name="bank_ticket_transfer">银结通票据转换</string>
    <string name="logout">退出登录</string>
    <string name="dot_scan">网点扫码</string>
    <string name="ticket_scan">票包扫码</string>
    <string name="small_exchange_scan">小交换扫码</string>
    <string name="empty_package">空包</string>
    <string name="confirm">确认</string>
    <string name="no_package">无包</string>
    <string name="id_scan">员工ID卡扫码</string>
    <string name="package_scan">包裹扫码</string>
    <string name="out_of_storage">出入库</string>
    <string name="add_oil">加油</string>
    <string name="repair">维修</string>
    <string name="out_of_mileage">出库时里程表</string>
    <string name="put_in_mileage">入库时里程表</string>
    <string name="begin_month_mileage">月初时里程表</string>
    <string name="end_month_mileage">ETC月底余额</string>
    <string name="time">时间</string>
    <string name="repair_money">维修价格</string>
    <string name="repair_reason">维修原因</string>
    <string name="unFinish">待完成(20)</string>
    <string name="FINISHED">已完成(0)</string>
    <string name="task_list">任务列表</string>
    <string name="LOGOUT_APP">再次点击退出App</string>
    <string name="out_in_mileage">出入库里程</string>
    <string name="data">日期</string>
    <string name="add_oil_mileage">加油里程表</string>
    <string name="REPAIR_RECORD">维修记录</string>
    <string name="out_month_mileage">月初里程表/ETC月底余额</string>
    <string name="mileage_money">里程/余额</string>
    <string name="ETC">ETC</string>
    <string name="mileage">里程</string>
</resources>
